# tiny-loki-forwarder

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/skills/tiny-loki-forwarder/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: usage.md
examples/: config.json  tiny-loki-forwarder.service
src/tiny_loki_forwarder/: __init__.py  cli.py  config.py  loki.py  state.py  tailer.py
tests/: run.py  test_config.py  test_loki.py  test_tailer.py
