[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-loki-forwarder"
version = "0.1.0"
description = "A tiny allowlist-only file forwarder for Grafana Loki."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "tiny-loki-forwarder contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Logging",
]
dependencies = []

[project.scripts]
tiny-loki-forwarder = "tiny_loki_forwarder.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"
